--- a/mirrorui/src/App.css
+++ b/mirrorui/src/App.css
@@ -1,8 +1,23 @@
+:root {
+  /* used to color the stat / card analytics for mirror */
+  --color-mirror-surface :#17141a;
+
+  /* SmarteStake Overall Branding */
+  --color-text: white;
+  --color-text-gray: #6d738c;
+  --color-background: #212024;
+  --color-smart-primary : #faa84c;
+  --color-smart-primary-bright: #ffc107;
+  --color-smart-main-surface: #0f1011;
+  --color-smart-main-surface--accent: #1b191b;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
-  margin:0.2rem;
-  padding:0.2rem;
-  background-color: #ffffff;
+  margin: 0;
+  padding: 0;
+  background-color: var(--color-background);
+  color: var(--color-text);;
 }
   /* background-color: #121a2f; */
   /* color: white; */
@@ -18,6 +33,14 @@ body {
   padding-left: 0rem;
   margin-left: 0rem;
   margin-right: 0rem;
+}
+
+#page-wrap {
+  padding: 8px 12px;
+
+  @media (min-width: 768px) { 
+    padding: 20px 30px;
+  }
 }
 
 .statRowLayout {
@@ -37,29 +60,85 @@ body {
 
 .infoTooltip {
   /* background-color: #2a3b69!important;*/
-  font-size: 1.1rem!important; 
+  font-size: 1rem!important; 
   /* font-weight: 600; */
   /* background-color: #151e36!important; */
-  background-color: white!important;
+  background-color: var(--color-text)!important;
   color: black!important;
+  padding: 1em;
 }
+
+.chartRow {
+  margin: 0;
+}
+
+.chartGridContainer {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 20px 20px;
+  grid-template-areas:
+    "."
+    ".";
+}
+
+@media (min-width: 768px) { 
+  .chartGridContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 20px 20px;
+    grid-template-areas:
+      ". .";
+  }
+}
+
+/*
+.chartGridContainer {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  gap: 20px 20px;
+  grid-template-areas:
+    "."
+    "."
+    "."
+    "."
+    "."
+    "."
+    "."
+    "."
+    "."
+    ".";
+}
+
+@media (min-width: 768px) { 
+  .chartGridContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    gap: 20px 20px;
+    grid-template-areas:
+      ". ."
+      ". ."
+      ". ."
+      ". ."
+      ". .";
+  }
+}
+*/
 
 /* IF layout issues happen with charts, look here */
 .chartBg {
   /* 23335F */
   box-sizing: border-box;
-  background-color: #2d4075;
+  background-color: var(--color-mirror-surface);
   /* background-color: #f9f9f9; */
-  border-radius: 25px;
+  border-radius: 10px;
   margin-top: 10px;
 	margin-bottom: 10px;
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
-  box-shadow: 3px 3px 3px 3px #4460ad;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-right: 0px;
-  padding-left: 0px;
+  padding: 1em;
+  font-size: 0.9em;
 }
 
 .headerWarning {
@@ -79,30 +158,44 @@ body {
 .animLink {
   background-color: Transparent;
   background-repeat:no-repeat;
-  border: none;
+  border: None;
+  /* border: 1px solid var(--color-text);
+  border-radius: 50%; */
   cursor:pointer;
   overflow: hidden;
   outline:none;
-  color: white;
+  color: var(--color-text);
   transition: transform 0.2s; border-color: 0.2s; color: 0.2s; box-shadow: 0.2s;
+  outline: none !important;
 }
 
 .animLink:hover {
   border-color: #f1ff5c;
-  color: rgb(247, 115, 115);
-  box-shadow: 0 0.5em 0.5em -0.4em #e6f543;
+  color: var(--color-smart-primary);
   transform: translateY(-0.15em);
   cursor: pointer;
 }
 
 .MuiToggleButtonGroup-root {
-  background-color: #2d4075;
-  color: white!important;
+  background-color: var(--color-mirror-surface);
+  color: var(--color-text)!important;
+  border: 0 !important;
+  min-width: 30px;
+  outline: 0 !important;
 }
 
 .MuiToggleButton-root {
-  background-color: #2d4075;
-  color: white!important;
+  background-color: var(--color-mirror-surface);
+  color: var(--color-text)!important;
+  border: 0 !important;
+  min-width: 30px;
+  outline: 0 !important;
+  min-width: 90px;
+}
+
+.NetworkSwitch-selected-1 {
+  border: 0 !important;
+  outline: 0 !important;
 }
 
 /*.MuiToggleButton-root.Mui-selected {
@@ -110,16 +203,57 @@ body {
 } */
 
 .notification {
-  background-color: #2d4075;
-  color: white;
+  background-color: var(--color-smart-main-surface--accent);
+  padding: 1em;
+  color: var(--color-text);
   padding-top: 0px;
   padding-left: 10px;
   margin-top: 0px;
   margin-bottom: 10px;
   border-radius: 0.2rem;
-  text-decoration: underline;
+  display: flex;
+  align-items: flex-start;
+  margin: 20px 0;
+  border-radius: 10px;
+  padding: 1em;
+  color: var(--color-smart-primary);
+  width: 100%;
 }
 
+.subHeader {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 0 5px;
+}
+
+.subHeader__group {
+  display: flex;
+  flex-direction: column-reverse;
+  width: 100%;
+  align-content: flex-start;
+  justify-content: flex-start;
+  margin: 20px 0;
+}
+
+@media (min-width: 768px) { 
+  .subHeader__group {
+    flex-direction: row;
+    align-content: space-between;
+  }
+}
+
+.lastUpdate {
+  font-weight: 200;
+  margin: 4px 0;
+  font-size: 14px;
+}
+
+.img-valign {
+  /* vertical-align: bottom; */
+  margin-bottom: 0.3rem;
+}
 
 /*
 
@@ -195,10 +329,6 @@ body {
   padding-right: 0.2rem;
 }
 
-.img-valign {
-  vertical-align: bottom;
-  margin-bottom: 0.1em;
-}
 
 
 .view-tag {
