--- a/mirrorui/src/components/Stat.css
+++ b/mirrorui/src/components/Stat.css
@@ -1,33 +1,69 @@
 .stat {
     /* 23335F */
     /* width: 160px; */
-    height: 100px;
-    background-color: #2d4075;
-    box-shadow: 1px 1px 1px 1px #4460ad;
-    border: 1px solid white;
+    height: 150px;
+    background: var(--color-mirror-surface);
+    border-radius: 10px;
     border-radius: 0.5rem;
     margin-bottom: 0.7rem;
+    padding: 0.5em;
     /* display: flex; */
 }
 
 .statTitle {
     width: 100%;
+    height: 90px;
+    font-size: 0.8rem;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+    /* align-items: center; */
+}
+
+.network {
+    color: var(--color-smart-primary);
+    padding: 0px;
+    border-radius: 2px;
+}
+
+.statValueNetwork {
+    font-size: 0.6rem;
+    font-weight: 500;
+    color: #f0f0f0 !important;
+    padding: 0px;
+    border-radius: 2px;
+    padding-left: 5px;
 }
 
 .statLabel {
     padding: 0.1rem 0.1rem;
     margin: 0.1rem;
-    width: 85%;
+    min-width: 100%;
     font-size: 0.9rem;
-    color: white;
-    display: inline-block;
+    color: var(--color-text-gray);
+    display: flex;
+    align-items: flex-start;
+}
+
+.textLabel {
+    max-width: 60%;
 }
 
 .statLabelTip {
-    width: 10%;
     text-align: right;
-    color: white;
-    display: inline-block;
+    color: var(--color-text-gray);
+    margin: 0px 5px;
+    padding-bottom: 2px;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    align-items: flex-end;
+    justify-content: flex-end;
+    align-content: flex-start;
 }
 
 .statValue {
@@ -38,12 +74,34 @@
     color: white;
 }
 
-.statValueNetwork {
-    padding: 0.2rem 0.2rem;
-    margin: 0.2rem;
-    font-size: 0.6rem;
-    font-weight: 500;
-    color: white;
+@media (min-width: 768px) { 
+    .stat {
+        height: 130px;
+        padding: 1em;
+    }
+
+ /*    .network {
+        order: 0;
+    }
+
+    .statLabel {
+        order: 1;
+    } */
+
+    .statValue {
+        font-size: 1.4em;
+    }
+
+    .textLabel {
+        max-width: 80%;
+    }
+
+    .statTitle {
+        height: 50px;
+        font-size: 1.2rem;
+        flex-direction: column;
+        margin-bottom: 10px;
+    }    
 }
 
 
