--- a/mirrorui/src/styles/mirror.css
+++ b/mirrorui/src/styles/mirror.css
@@ -12,8 +12,14 @@
 }
 
 .headerActions {
-    width: 40%;
+    flex: 1;
     display: inline-block;
-    text-align: right;
+    margin-bottom: 10px;
+}
+
+@media (min-width: 768px) {
+    .headerActions {
+        text-align: right;
+    }
 }
 
